# SeokhyunEngine

./: .gitignore  CMakeLists.txt  Dependency.cmake  README.md
SampleAppTest/: SampleApp.cpp  SampleApp.h  main.cpp
SampleAppTest/Resources/: sample.fs  sample.vs
SeokhyunEngine/: Application.cpp  Application.h  Launcher.cpp  Launcher.h  SeokhyunEngine.h  common.h
SeokhyunEngine/Configuration/: WindowMode.h
SeokhyunEngine/Event/: Event.h  EventDispatcher.cpp  EventDispatcher.h  EventManager.cpp  EventManager.h
SeokhyunEngine/Event/Input/KeyBoard/: KeyBoardEvent.cpp  KeyBoardEvent.h  KeyDownEvent.cpp  KeyDownEvent.h  KeyUpEvent.cpp  KeyUpEvent.h
SeokhyunEngine/Event/Input/Mouse/: MouseButtonEvent.cpp  MouseButtonEvent.h  MouseDownEvent.cpp  MouseDownEvent.h  MouseMoveEvent.h  MouseScrollEvent.cpp  MouseScrollEvent.h  MouseUpEvent.cpp  MouseUpEvent.h
SeokhyunEngine/Event/Window/: WindowFocusEvent.cpp  WindowFocusEvent.h  WindowMoveEvent.cpp  WindowMoveEvent.h  WindowResizeEvent.cpp  WindowResizeEvent.h  WindowStateEvent.cpp  WindowStateEvent.h
SeokhyunEngine/Math/: AABB.cpp  AABB.h
SeokhyunEngine/Platform/: AppLauncher.cpp  AppLauncher.h  RuntimePlatform.h  Window.cpp  Window.h  WindowHandler.cpp  WindowHandler.h
SeokhyunEngine/Platform/Windows/: WindowsAppLauncher.cpp  WindowsAppLauncher.h  WindowsWindow.cpp  WindowsWindow.h
SeokhyunEngine/Platform/macOS/: macOSAppLauncher.cpp  macOSAppLauncher.h  macOSWindow.h  macOSWindow.mm
SeokhyunEngine/Renderer/OpenGL/: Buffer.cpp  Buffer.h  Mesh.cpp  Mesh.h  Program.cpp  Program.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
SeokhyunEngine/Utility/: FileReader.h  Resolution.h
src/: RuntimePlatform.h  common.h  main.cpp
src/Platform/: Window.h  Window.mm
